Fixes introduction modal not closing when clicking outside the interactive area, also fixes introduction modal overflowing the page

--- a/src/web/components/layoutPieces/Modal/styles.css
+++ b/src/web/components/layoutPieces/Modal/styles.css
@@ -16,6 +16,7 @@
   width: 100%;
   /* it needs to be this high because of the Performance Radar graph labels :/ */
   z-index: 100;
+  overflow: hidden;
 }
 
 .modal-innerWrapper {
